manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: hello-py-app
    template:
       metadata:
          labels:
             app: hello-py-app
       spec:
          containers:
          - name: hello-py
            image: aitakynsultan/k8s:v4
            ports:
              - name: hello-py
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health/
              initialDelaySeconds: 10
              periodSeconds: 10
              timeoutSeconds: 1
            readinessProbe:
              httpGet:
                port: 8000
                path: /health/
              initialDelaySeconds: 10
              periodSeconds: 5
